--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -8,7 +8,8 @@ width:768px;
 height: 1024px;
 margin-left: auto;
 margin-right: auto;
-background-color: #3b3b3b;
+background-image: url(images/bg2.jpg);
+background-size: 768px 1024px;
 }
 
 .circle {
@@ -18,17 +19,19 @@ top:200px;
 border-radius: 50%;
 width: 100px;
 height: 100px;
-border-width: 1px;
+border-width: 2px;
 border: #fff solid;
--webkit-transition: 2s ease;
 -webkit-box-sizing: border-box;
--webkit-animation:bob 2s ease;
--webkit-animation-iteration-count:infinite;
+-webkit-transition: border-width 2s ease;
 }
 
-.circle:hover {
+.circle:active {
 border-width: 50px;
-background-color: #fff;
+}
+
+.bob {
+-webkit-animation:bob 2s ease;
+-webkit-animation-iteration-count:infinite;	
 }
 
 @-webkit-keyframes bob {
