--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -19,22 +19,21 @@ top:200px;
 border-radius: 50%;
 width: 100px;
 height: 100px;
-border-width: 1px;
-border: #fff solid;
+border: rgba(255,255,255,0.5) solid 2px;
 
 -webkit-transition: border-width 2s ease;
 }
 
 
 .bob {
--webkit-animation:bob 2s ease;
+-webkit-animation:bob 2s cubic-bezier(.42,0,.58,1);
 -webkit-animation-iteration-count:infinite;	
 }
 
 @-webkit-keyframes bob {
-	0% {-webkit-transform:translateY(0px); -webkit-transform:scale(1,1);}
-	50% {-webkit-transform:translateY(15px); -webkit-transform:scale(1.1,1.1);}
-	0% {-webkit-transform:translateY(0px); -webkit-transform:scale(1,1);}
+	0% {-webkit-transform:translateY(0px); border-color: rgba(255,255,255,0.5);}
+	50% {-webkit-transform:translateY(-15px); border-color: rgba(255,255,255,1);}
+	0% {-webkit-transform:translateY(0px); border-color: rgba(255,255,255,0.5);}
 }
 
 .aqua {
