--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -14,7 +14,7 @@ background-size: 768px 1024px;
 border-radius: 50%;
 width: 100px;
 height: 100px;
-border: rgba(255,255,255,0.3) solid 2px;
+border: rgba(255,255,255,0.3) solid 1px;
 
 -webkit-transition: border-width 2s ease;
 }
@@ -54,7 +54,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 }
 
 .pisces{
-	background-image: url(images/aqua.png);
+	background-image: url(images/pisces.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -64,7 +64,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 }
 
 .aries {
-	background-image: url(images/aqua.png);
+	background-image: url(images/aries.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -74,7 +74,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 }
 
 .taurus {
-	background-image: url(images/aqua.png);
+	background-image: url(images/taurus.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -83,7 +83,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 	-webkit-animation-delay: 0.5s;
 }
 .gemini {
-	background-image: url(images/aqua.png);
+	background-image: url(images/gemini.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -92,7 +92,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 	-webkit-animation-delay: 0.4s;
 }
 .cancer{
-	background-image: url(images/aqua.png);
+	background-image: url(images/cancer.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -101,7 +101,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 	-webkit-animation-delay: 0.3s;
 }
 .leo {
-	background-image: url(images/aqua.png);
+	background-image: url(images/leo.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -110,7 +110,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 	-webkit-animation-delay: 0.2s;
 }
 .virgo {
-	background-image: url(images/aqua.png);
+	background-image: url(images/virgo.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -119,7 +119,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 	-webkit-animation-delay: 0.1s;
 }
 .libra {
-	background-image: url(images/aqua.png);
+	background-image: url(images/libra.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -129,7 +129,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 }
 
 .scorpio {
-	background-image: url(images/aqua.png);
+	background-image: url(images/scorpio.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -138,7 +138,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 	-webkit-animation-delay: 0s;
 }
 .sag {
-	background-image: url(images/aqua.png);
+	background-image: url(images/sag.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
@@ -147,7 +147,7 @@ border: rgba(255,255,255,0.3) solid 2px;
 	-webkit-animation-delay: 0.1s;
 }
 .capricorn {
-		background-image: url(images/aqua.png);
+		background-image: url(images/cap.png);
 	background-size: 100px 100px;
 	background-position: center;
 	position: absolute;
