--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -10,6 +10,13 @@ background-image: url(images/bg2.jpg);
 background-size: 768px 1024px;
 }
 
+.piscescont {
+width:768px;
+height: 1024px;
+background-image: url(images/pisces.jpg);
+background-size: 768px 1024px;	
+}
+
 .circle {
 border-radius: 50%;
 width: 100px;
