--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -13,7 +13,7 @@ background-size: 768px 1024px;
 .piscescont {
 width:768px;
 height: 1024px;
-background-image: url(images/pisces.jpg);
+background-image: url(images/chel.jpg);
 background-size: 768px 1024px;	
 }
 
