--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -3,6 +3,33 @@ background-color: #2b2b2b;
 margin:0;
 }
 
+.greybg {
+width:768px;
+height: 1024px;
+background-color: #1b1b1b;
+}
+
+.innerlines {
+width: 100%;
+height:90%;
+border-top: 1px solid #fff;
+border-bottom: 1px solid #fff;
+position: relative;
+top:5%;
+}
+
+.begin {
+width:300px;
+height: 100px;
+background-image: url(images/begin.png);
+position: relative;
+margin-left: auto;
+margin-right: auto;
+top: 50%;
+margin-top: -50px;
+opacity: 0.4;
+}
+
 .container {
 width:768px;
 height: 1024px;
@@ -32,10 +59,21 @@ border: rgba(255,255,255,0.3) solid 1px;
 -webkit-animation-iteration-count:infinite;	
 }
 
+.bobopap {
+-webkit-animation:bobopap 2s cubic-bezier(.42,0,.58,1);
+-webkit-animation-iteration-count:infinite;	
+}
+
 @-webkit-keyframes bob {
 	0% {-webkit-transform:translateY(0px); border-color: rgba(255,255,255,0.3);}
 	50% {-webkit-transform:translateY(-10px); border-color: rgba(255,255,255,1);}
 	0% {-webkit-transform:translateY(0px); border-color: rgba(255,255,255,0.3);}
+}
+
+@-webkit-keyframes bobopap {
+	0% {-webkit-transform:translateY(0px); opacity: 0.4;}
+	50% {-webkit-transform:translateY(-6px); opacity: 1;}
+	0% {-webkit-transform:translateY(0px); opacity: 0.4;}
 }
 
 
