--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -54,7 +54,7 @@ background-position: center center;	*/
   padding-top: 100px;
   height: 768px;
   width: 1024px;
-  background-image: url('chel.jpg');
+  background-image: url('images/chel.jpg');
   background-size: 950px 1124px;
   background-position: -50px -50px;
 }
