--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -44,18 +44,12 @@ background-size: 768px 1024px;
 .piscescont {
 width:768px;
 height: 1024px;
-/*background-image: url(images/chel.jpg);
+background-image: url(images/chel.jpg);
 background-size: 950px 1124px;
-background-position: center center;	*/
+background-position: center center;	
 }
 
-#background {
-  margin: 0 auto;
-  padding-top: 100px;
-  height: 1024px;
-  width: 900px;
-  background-position: -50px -50px;
-}
+
 
 .fadein {
 opacity: 0;
