--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -3,8 +3,13 @@ background-color: #1b1b1b;
 }
 
 body {
-background-color: #2b2b2b;
 margin:0;
+}
+
+.fadeout {
+opacity: 1;
+-webkit-animation: fadeout 1s cubic-bezier(.42,0,.58,1);
+-webkit-animation-fill-mode: forwards;
 }
 
 .greybg {
@@ -91,6 +96,10 @@ border: rgba(255,255,255,0.3) solid 1px;
 @-webkit-keyframes fadein {
 	0%{opacity: 0;}
 	100%{opacity: 1;}
+}
+@-webkit-keyframes fadeout {
+	0%{opacity: 1;}
+	100%{opacity: 0;}
 }
 
 .centerbox {
