--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -28,15 +28,16 @@ top:5%;
 }
 
 .begin {
-width:300px;
-height: 100px;
+width:150px;
+height: 50px;
 background-image: url(images/begin.png);
 position: relative;
 margin-left: auto;
 margin-right: auto;
 top: 50%;
-margin-top: -50px;
+margin-top: -25px;
 opacity: 0.4;
+background-size: 150px 50px; 
 }
 
 .container {
@@ -272,12 +273,13 @@ bottom: 100px;
 
 .backbutton {
 	background-image: url(images/texts/back.png);
-	background-size: 21px 21px;
+	background-size: 28px 28px;
 	position: absolute;
 	top: 30px;
 	left: 10px;
 	z-index: 30;
-	width: 21px;
-	height: 21px;
+	width: 28px;
+	height: 28px;
+	opacity: 0.7;
 }
 
