--- a/zodiac/main.css
+++ b/zodiac/main.css
@@ -562,7 +562,7 @@ bottom: 100px;
 .huhcont {
 width:768px;
 height: 1024px;
-background-image: url(images/fefe.jpg);
+background-image: url(images/fefn.jpg);
 background-size: 768px 1024px;
 background-position: center center;	
 }
