--- a/walters/main.css
+++ b/walters/main.css
@@ -1,1 +1,23 @@
-cool {}
+	.numberinput {
+		width: 100%;
+		height: 88px;
+		background-image: url(images/fixedhead.png);
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		z-index: 10;
+		background-repeat: no-repeat;
+		background-size: 320px auto;
+	}
+
+	.numberinput2 {
+		width: 100%;
+		height: 223px;
+		background-image: url(images/menuswap.png);
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		z-index: 10;
+		background-repeat: no-repeat;
+		background-size: 320px auto;
+	}
