--- a/clients/refs/site/main.css
+++ b/clients/refs/site/main.css
@@ -22,6 +22,7 @@ body {
 	top: 0px;
 	left: 0px;
 	background-size: 100% 100%;
+	opacity: 0.3;
 }
 .edgeTR {
 	background-image: url(images/edge.png);
@@ -33,6 +34,7 @@ body {
 	right: 0px;
 	background-size: 100% 100%;
 	-webkit-transform: scale(-1, 1);
+	opacity: 0.3;
 }
 
 #stars1 {
@@ -75,8 +77,25 @@ body {
 	left: 0px;
 	position: fixed;
 }
+#stars5 {
+	background-image: url(images/stars/stars5.png);
+	background-repeat: repeat;
+	width: 100%;
+	height: 100%;
+	background-position: 0, 0;
+	left: 0px;
+	position: fixed;
+}
 
-pic {
+.logobox {
+	background-image: url(images/logo.png);
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	width:  40%;
+	height: 50%;
 	position: relative;
-	z-index: 1;
+	margin-left: auto;
+	margin-right: auto;
+	top: 40%;
+
 }
