--- a/clients/refs/site/main.css
+++ b/clients/refs/site/main.css
@@ -102,7 +102,9 @@ body {
 
 
 @media only screen 
-and (max-width : 668px) {
+and (max-width : 668px) and only screen and (-webkit-min-device-pixel-ratio: 1.5),
+  only screen and (min--moz-device-pixel-ratio: 1.5),
+  only screen and (min-device-pixel-ratio: 1.5){
 .logobox {
 	background-image: url(images/logo.png);
 	background-size: 100% auto;
