--- a/clients/refs/site/main.css
+++ b/clients/refs/site/main.css
@@ -88,6 +88,7 @@ body {
 }
 
 .logobox {
+	
 	background-image: url(images/logo.png);
 	background-size: 100% auto;
 	background-repeat: no-repeat;
@@ -97,7 +98,17 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	top: 40%;
+	
+	-webkit-animation: fff 2s;
+	-webkit-animation-fill-mode: forwards;
+	-webkit-animation-delay: 2s;
 
+
+}
+
+@-webkit-keyframes fadein {
+0% { opacity: 0;}
+100% {opacity: 1;}
 }
 
 
