--- a/clients/refs/site/main.css
+++ b/clients/refs/site/main.css
@@ -90,38 +90,29 @@ body {
 
 .logobox {
 	
+	
 	background-image: url(images/logo.png);
 	background-size: 100% auto;
 	background-repeat: no-repeat;
-	width:  40%;
+	width:  90%;
 	height: 50%;
-	position: relative;
+	position: fixed;
 	margin-left: auto;
 	margin-right: auto;
-	top: 35%;
-	
-	-webkit-animation: fff 2s;
-	-webkit-animation-fill-mode: forwards;
-	-webkit-animation-delay: 2s;
+	top: 20%
 
 
 }
 
 .nav {
 	position: fixed;
-	bottom: 3%;
-	padding: 10px;
-	border-top: 2px solid #63d4fe;
-	text-align: center;
-	font-family: "Montserrat";
-	font-weight: 400;
-	color: #b3655d;
-	font-size: 14px;
-	margin-bottom: 0px;
-	right: 27.5%;
-	left: 27.5%;
-	margin-top: 200px;
-	line-height: 35px;
+	bottom: 0px;
+	width: 100%;
+	height: 100px;
+	font-size: 15px;
+	margin: 0 auto;
+	left: 0px;
+	right: 0px;
 
 }
 
@@ -150,13 +141,80 @@ body {
 }
 
 
-@media only screen 
-and (max-width : 600px) {
+@media only screen and (min-width : 320px) {
 .logobox {
 	background-image: url(images/logo.png);
 	background-size: 100% auto;
 	background-repeat: no-repeat;
-	width:  90%;
+	width:  88%;
+	height: 50%;
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	top: 35%;
+
+}
+.nav  {
+position: fixed;
+	bottom: 0px;
+	width: 100%;
+	height: 100px;
+	font-size: 15px;
+	margin: 0 auto;
+	left: 0px;
+	right: 0px;
+	font-family: "Montserrat";
+	font-weight: 400;
+	color: #b3655d;
+	font-size: 14px;
+	border-top: 2px solid #63d4fe;
+	padding: 10px;
+}
+
+}
+
+
+
+@media only screen and (min-width : 600px) {
+.logobox {
+	background-image: url(images/logo.png);
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	width:  40%;
+	height: 50%;
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	top: 35%;
+
+}
+
+.nav {
+	position: fixed;
+	bottom: 2%;
+	padding: 10px;
+	border-top: 2px solid #63d4fe;
+	text-align: center;
+	font-family: "Montserrat";
+	font-weight: 400;
+	color: #b3655d;
+	font-size: 14px;
+	margin-bottom: 0px;
+	right: 15%;
+	left: 15%;
+	margin-top: 300px;
+	line-height: 35px;
+	width: 70%
+}
+
+}
+/*
+@media only screen and (min-width : 601px) and (max-width : 800px) {
+.logobox {
+	background-image: url(images/logo.png);
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	width:  70%;
 	height: 50%;
 	position: relative;
 	margin-left: auto;
@@ -164,6 +222,9 @@ and (max-width : 600px) {
 	top: 100px;
 
 }
+
+
+
 
 .nav {
 	position: fixed;
@@ -179,6 +240,16 @@ and (max-width : 600px) {
 }
 
 }
+
+
+*/
+
+
+
+
+
+
+
 
 
 
