--- a/clients/refs/waves/main.css
+++ b/clients/refs/waves/main.css
@@ -108,14 +108,24 @@ body {
 	z-index: 30;
 }
 
-/*  Keyframing  */
-
-
-@-webkit-keyframes movebg1 {
-	0% {background-position: 0 0;}
-	100% {background-position: 0 -500;}
+#cont {
+	width: 150%;
+	height: 150%;
+	position: fixed;	
+	/*-webkit-animation: movebg1 1s linear infinite;*/
+	overflow: hidden;
 }
 
+
+/*  Keyframing  */
+
+/*
+@-webkit-keyframes movebg1 {
+	0% {-webkit-transform: translateX(0px);}
+	50% {-webkit-transform: translateX(100px);}
+	100% {-webkit-transform: translateX(0px);}
+}
+*/
 
 /*  Navigation  */
 
@@ -186,7 +196,6 @@ body {
 
 
 
-
 .bg {
 	background-image: url(images/bgxl.jpg);
 	background-repeat: no-repeat;
@@ -231,7 +240,7 @@ body {
 	z-index: 1;
 	position: fixed;
 	-webkit-animation-name: MOVE-BGA;
-	-webkit-animation-duration: 1s;
+	-webkit-animation-duration: 5s;
 	-webkit-animation-timing-function: linear;
 	-webkit-animation-iteration-count: infinite;
 	overflow: hidden;
@@ -249,7 +258,7 @@ body {
 	position: fixed;
 	opacity: 0.5;
 	-webkit-animation-name: MOVE-BGB;
-	-webkit-animation-duration: 2s;
+	-webkit-animation-duration: 8s;
 	-webkit-animation-timing-function: linear;
 	-webkit-animation-iteration-count: infinite;
 	overflow: hidden;
