--- a/clients/refs/wavesgrid/main.css
+++ b/clients/refs/wavesgrid/main.css
@@ -51,11 +51,6 @@ body {
 	margin: 0;
 }
 
-.stars {
-	width: 100%;
-	height: 100%;
-}
-
 .waves {
 	width: 100%;
 	height: 100%;
@@ -64,35 +59,6 @@ body {
 	background-image: url(images/wavesonly.gif);
 	position: absolute;
 	background-repeat: no-repeat;
-}
-
-.particular1 {
-	background-image: url(images/particles/sheet1.png);
-	background-position: 0 0;
-	background-repeat: repeat;
-	background-size: 200% 200%;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	-webkit-animation: movebg1 1s infinite;
-	-webkit-animation-timing-function: linear;
-	pointer-events:none;
-}
-
-.particular2 {
-	background-image: url(images/particles/sheet2.png);
-	background-position: 0 0;
-	background-repeat: repeat;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	-webkit-animation: movebg1 0.5s infinite;
-	-webkit-animation-timing-function: linear;
-	pointer-events:none;
 }
 
 .fader {
@@ -192,43 +158,6 @@ body {
 }
 
 
-
-
-
-
-.bg {
-	background-image: url(images/bgxl.jpg);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	position: fixed;
-	bottom: 0px;
-	width: 100%;
-	height: 100%;
-}
-
-.edgeTL {
-	background-image: url(images/edge.png);
-	background-repeat: no-repeat;
-	width: 80%;
-	height: 80%;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	background-size: 100% 100%;
-	opacity: 0.3;
-}
-.edgeTR {
-	background-image: url(images/edge.png);
-	background-repeat: no-repeat;
-	width: 80%;
-	height: 80%;
-	position: fixed;
-	top: 0px;
-	right: 0px;
-	background-size: 100% 100%;
-	-webkit-transform: scale(-1, 1);
-	opacity: 0.3;
-}
 /*
 #stars1 {
 	background-image: url(images/sf1.png);
@@ -248,36 +177,41 @@ body {
 }
 */
 #stars1 {
-	background-image: url(images/g1.png);
+	background-image: url(images/dot.svg);
 	background-repeat: repeat;
 	width: 130%;
-	height: 180%;
+	height: 200%;
 	left: -300px;
 	z-index: 1;
 	position: fixed;
+	background-size: 150px 150px;
+	
 	-webkit-animation-name: MOVE-BGA;
 	-webkit-animation-duration: 1s;
 	-webkit-animation-timing-function: linear;
 	-webkit-animation-iteration-count: infinite;
+	
 	overflow: hidden;
 
 }
 
 #stars2 {
-	background-image: url(images/g2.png);
+	background-image: url(images/dotx-01.svg);
 	background-repeat: repeat;
 	width: 130%;
 	height: 180%;
-	background-position: 0, 0;
+	background-position: center center;
 	left: -500px;
 	position: fixed;
 	opacity: 0.5;
+	background-size: 125px 125px;
 	-webkit-animation-name: MOVE-BGB;
 	-webkit-animation-duration: 2s;
 	-webkit-animation-timing-function: linear;
 	-webkit-animation-iteration-count: infinite;
 	overflow: hidden;
 }
+
 #stars3 {
 	background-image: url(images/g3.png);
 	background-repeat: repeat;
@@ -287,6 +221,7 @@ body {
 	left: -500px;
 	position: fixed;
 	opacity: 0.5;
+	background-size: 100px 100px;
 	-webkit-animation-name: MOVE-BGC;
 	-webkit-animation-duration: 3s;
 	-webkit-animation-timing-function: linear;
@@ -296,19 +231,15 @@ body {
 
 
 .logobox {
-	
-	
 	background-image: url(images/logo.png);
 	background-size: 100% auto;
 	background-repeat: no-repeat;
-	width:  90%;
+	width:  40%;
 	height: 50%;
-	position: fixed;
+	position: relative;
 	margin-left: auto;
 	margin-right: auto;
-	top: 20%;
-	z-index: 52;
-
+	top: 35%;
 
 }
 
@@ -380,123 +311,4 @@ body {
 .nav h2 {
 	font-size: 8px;
 }
-
-@-webkit-keyframes fadein {
-0% { opacity: 0;}
-100% {opacity: 1;}
-}
-
-
-@media only screen and (min-width : 320px) {
-.logobox {
-	background-image: url(images/logo.png);
-	background-size: 100% auto;
-	background-repeat: no-repeat;
-	width:  88%;
-	height: 50%;
-	position: relative;
-	margin-left: auto;
-	margin-right: auto;
-	top: 35%;
-
-}
-.nav  {
-position: fixed;
-	bottom: 0px;
-	width: 100%;
-	height: 100px;
-	font-size: 15px;
-	margin: 0 auto;
-	left: 0px;
-	right: 0px;
-	font-family: "Montserrat";
-	font-weight: 400;
-	color: #b3655d;
-	font-size: 14px;
-	border-top: 2px solid #63d4fe;
-	padding: 10px;
-}
-
-}
-
-
-
-@media only screen and (min-width : 600px) {
-.logobox {
-	background-image: url(images/logo.png);
-	background-size: 100% auto;
-	background-repeat: no-repeat;
-	width:  40%;
-	height: 50%;
-	position: relative;
-	margin-left: auto;
-	margin-right: auto;
-	top: 35%;
-
-}
-
-.nav {
-	position: fixed;
-	bottom: 2%;
-	padding: 10px;
-	border-top: 2px solid #63d4fe;
-	text-align: center;
-	font-family: "Montserrat";
-	font-weight: 400;
-	color: #b3655d;
-	font-size: 14px;
-	margin-bottom: 0px;
-	right: 15%;
-	left: 15%;
-	margin-top: 300px;
-	line-height: 35px;
-	width: 70%
-}
-
-
-}
-/*
-@media only screen and (min-width : 601px) and (max-width : 800px) {
-.logobox {
-	background-image: url(images/logo.png);
-	background-size: 100% auto;
-	background-repeat: no-repeat;
-	width:  70%;
-	height: 50%;
-	position: relative;
-	margin-left: auto;
-	margin-right: auto;
-	top: 100px;
-
-}
-
-
-
-
-.nav {
-	position: fixed;
-	bottom: 0px;
-	width: 100%;
-	height: 100px;
-	font-size: 15px;
-	margin: 0 auto;
-	left: 0px;
-	right: 0px;
-
-}
-}
-
-}
-
-
-*/
-
-
-
-
-
-
-
-
-
 
