--- a/clients/refs/canvas/main.css
+++ b/clients/refs/canvas/main.css
@@ -50,6 +50,7 @@ body {
 	top: 20px;
 	left: 20px;
 	z-index: 50;
+	cursor: pointer;
 }
 
 .twitter {
@@ -62,6 +63,7 @@ body {
 	bottom: -10px;
 	left: 20px;
 	z-index: 50;
+	cursor: pointer;
 }
 
 .email {
@@ -74,6 +76,7 @@ body {
 	top: 20px;
 	right: 20px;
 	z-index: 50;
+	cursor: pointer;
 }
 
 .mailing {
@@ -86,4 +89,5 @@ body {
 	bottom: -10px;
 	right: 20px;
 	z-index: 50;
+	cursor: pointer;
 }
