--- a/climatesite/main.css
+++ b/climatesite/main.css
@@ -22,7 +22,8 @@ body {
 .content {
 	position: relative;
 	width: 1100px;
-	min-height: 900px;
+	height: 2450px;
+	padding-bottom: 100px;
 	border-radius: 8px;
 	background-color: #fff;
 	margin-left: auto;
@@ -31,6 +32,7 @@ body {
 	padding-left: 50px;
 	padding-right: 50px;
 	padding-top: 60px;
+	margin-bottom: 200px;
 }
 
 .logobox {
@@ -77,6 +79,24 @@ body {
 	box-sizing: border-box;
 	-webkit-transition: color 0.4s;
 }
+
+.innerstudent {
+	width: 220px;
+	height: 220px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 100%;
+	background-color: #fff;
+	overflow: hidden;
+	margin-bottom: 20px;
+}
+
+.innerstudent img {
+	width: 100%;
+	height: auto;
+}
+
 
 .cloud1 {
 	width: 100%;
