--- a/clients/refs/refs/main.css
+++ b/clients/refs/refs/main.css
@@ -33,7 +33,7 @@ body {
 	background-position: center center;
 	margin-left: auto;
 	margin-right: auto;
-	top: 38%;
+	top: 37%;
 	left: 50%;
 	margin-left: -250px;
 	padding-top: 15%;
@@ -69,20 +69,44 @@ body {
 
 @media only screen and (max-width: 900px) {
 	.content {
-	        width: 60%;
-	        left: 20%;
-	        margin-left: auto;
-	        margin-right: auto;
+	       width: 400px;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	background-position: center center;
+	margin-left: auto;
+	margin-right: auto;
+	top: 38%;
+	left: 50%;
+	margin-left: -200px;
+	padding-top: 15%;
+	margin-top: -200px;
+	position: fixed;
+	z-index: 20;
+	vertical-align: center;
 	}
 }
 
 @media only screen and (max-width: 600px) {
 	.content {
-	        width: 80%;
-	        left: 10%;
-	        margin-left: auto;
-	        margin-right: auto;
+	       width: 300px;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	background-position: center center;
+	margin-left: auto;
+	margin-right: auto;
+	top: 38%;
+	left: 50%;
+	margin-left: -153px;
+	padding-top: 15%;
+	margin-top: -100px;
+	position: fixed;
+	z-index: 20;
+	vertical-align: center;
 	}
+
+	.sm {width: 60%;}
 }
 
 
